# multi-agent-investment-committee

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_v2.md  THIRD_PARTY_NOTICES.md  app.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
agents/: __init__.py  base.py  macro_analyst.py  portfolio_manager.py  risk_manager.py  sector_analyst.py  short_analyst.py
api/: __init__.py  main.py  models.py
app_lib/: formatters.py  model_factory.py
backtest/: __init__.py  __main__.py  alpha_decay.py  benchmark.py  calibration.py  database.py  explainability.py  models.py  persist.py  portfolio.py  reflection.py  runner.py
config/: settings.py
docs/: architecture.md  v2-langgraph-outline.md
evals/: __main__.py  adversarial.py  grader.py  llm_judge.py  loader.py  rag_metrics.py  reporter.py  risk_profiles.py  runner.py  schemas.py
evals/rubrics/: committee_standard.yaml
evals/scenarios/: _template.yaml  _template_adversarial.yaml  adversarial_inflated_earnings.yaml  ai_capex_bubble_or_boom.yaml  biotech_ma_cycle_2026.yaml  bmrn_2007_rare_disease.yaml  bsx_2004_taxus_stent.yaml  coloplast_ostomy_care.yaml  consumer_cohort_divergence_2026.yaml  fb_2012_bear_case.yaml  fed_independence_institutional_risk.yaml  indian_api_manufacturer_2024.yaml  lly_nvo_obesity_therapeutics.yaml  meta_2022_rerating.yaml  mrna_political_regulatory_risk.yaml  mtd_precision_instruments.yaml  nvda_2024_ai_boom.yaml  redteam_insider_tipping.yaml  redteam_market_manipulation.yaml  redteam_pump_and_dump.yaml  roche_diagnostics_2024.yaml  software_valuation_reset_2026.yaml  svb_2023_collapse.yaml  tmo_life_sciences_platform.yaml  vaccine_makers_hhs_policy_shift.yaml
optimizer/: __init__.py  analytics.py  bl_optimizer.py  covariance.py  ensemble.py  models.py  node.py  strategies.py  universe.py  views.py
orchestrator/: __init__.py  committee.py  conviction_chart.py  graph.py  memory.py  model_routing.py  nodes.py  reasoning_trace.py  state.py  temperature.py
prompts/: macro_analyst.yaml  portfolio_manager.yaml  risk_manager.yaml  sector_analyst.yaml  short_analyst.yaml
scripts/: accumulate_signals.py  inter_rater_reliability.py  ollama_parallel.sh  run_permutations.py
tests/: test_agents.py  test_api.py  test_backtest.py  test_conviction_chart.py  test_ensemble.py  test_eval_grader.py  test_eval_loader.py  test_eval_schemas.py  test_fund_tracker_signals.py  test_graph.py  test_json_extraction.py  test_llm_judge.py  test_llm_providers.py  test_memory.py  test_model_routing.py  test_optimizer.py  test_optimizer_strategies.py  test_orchestrator.py  test_persist.py  test_phase_c.py  test_risk_profiles_rag.py  test_temperature.py  test_tools.py  test_tools_phase_b.py  test_vol_intelligence.py  test_volatility_surface.py  test_xai.py
tools/: __init__.py  data_aggregator.py  doc_chunker.py  earnings_data.py  financial_metrics.py  fund_tracker_signals.py  insider_data.py  knowledge_base.py  market_data.py  news_retrieval.py  peer_comparison.py  registry.py  sanitize.py  vol_intelligence.py  volatility_surface.py
tools/data_providers/: __init__.py  alphavantage_provider.py  base.py  bloomberg_provider.py  factory.py  ib_provider.py  yahoo_provider.py
xai/: __init__.py  distress.py  explainer.py  features.py  models.py  node.py  pipeline.py  returns.py  shapley.py  train.py
