[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-agent-investment-committee"
version = "3.5.0"
description = "Multi-agent investment committee: autonomous agents that reason, debate, and synthesize investment theses with document KB upload, sentiment extraction, quant portfolio construction heuristics, and RL-ready T signal"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Your Name"},
]
keywords = ["ai", "agents", "multi-agent", "investment", "reasoning", "langgraph", "sentiment", "volatility", "reinforcement-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "smolagents>=1.0.0",
    "gradio>=6.0.0",
    "yfinance>=0.2.0",
    "feedparser>=6.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "huggingface-hub>=0.25.0",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "pre-commit>=3.0.0",
]
openai = [
    "openai>=1.50.0",
]
ollama = [
    "ollama>=0.4.0",
]
langgraph = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]
docs = [
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "tiktoken>=0.7.0",
]
all = [
    "openai>=1.50.0",
    "ollama>=0.4.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "tiktoken>=0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "orchestrator", "tools", "config"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
