[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-agent-investment-committee"
version = "4.0.0"
description = "Multi-agent investment committee with structured reasoning, adversarial debate, XAI pre-screen (Shapley values), Black-Litterman optimizer, backtesting, FastAPI, and RL-ready T signal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "bdschi1"},
]
keywords = ["ai", "agents", "multi-agent", "investment", "reasoning", "langgraph", "evals", "adversarial-testing", "reinforcement-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "bds-data-providers @ git+https://github.com/bdschi1/financial-data-providers.git",
    "smolagents>=1.0.0",
    "gradio>=6.0.0",
    "yfinance>=0.2.0",
    "feedparser>=6.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "huggingface-hub>=0.25.0",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "plotly>=5.0.0",
    "pyportfolioopt>=1.5.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "pre-commit>=3.0.0",
]
openai = [
    "openai>=1.50.0",
]
ollama = [
    "ollama>=0.4.0",
]
langgraph = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]
docs = [
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "tiktoken>=0.7.0",
]
bloomberg = [
    "blpapi>=3.19.0",
]
ibkr = [
    "ib_insync>=0.9.86",
]
alphavantage = [
    "requests>=2.28",
]
optimizer = [
    "pyportfolioopt>=1.5.0",
    "scipy>=1.10.0",
]
kb = [
    "chromadb>=0.5.0",
    "tiktoken>=0.7.0",
    "sentence-transformers>=3.0",
]
xai = [
    "xgboost>=2.0.0",
    "shap>=0.44.0",
    "matplotlib>=3.7.0",
]
all = [
    "openai>=1.50.0",
    "ollama>=0.4.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "tiktoken>=0.7.0",
    "xgboost>=2.0.0",
    "shap>=0.44.0",
    "matplotlib>=3.7.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0",
    "pyportfolioopt>=1.5.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "orchestrator", "tools", "config", "evals", "optimizer", "backtest", "api", "xai"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
